--- a/app/src/main/res/xml/pref_xiaomi.xml
+++ b/app/src/main/res/xml/pref_xiaomi.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <PreferenceCategory android:title="Other">
+    <PreferenceCategory android:title="Touchscreen">
         <CheckBoxPreference
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
