--- a/app/src/main/res/xml/pref_misc.xml
+++ b/app/src/main/res/xml/pref_misc.xml
@@ -111,6 +111,11 @@
             android:key="key_misc_force_navbar_off"
             android:title="Force navigation bar disabled" />
 		<CheckBoxPreference
+            android:defaultValue="false"
+            android:key="key_misc_navbar_inverse"
+            android:title="Navigation bar inverse"
+            android:summary="Requires navbar mode re-select" />
+		<CheckBoxPreference
             android:defaultValue="true"
             android:key="key_misc_storage_fuse"
             android:title="Disable FUSE storage layer"
