--- a/app/src/main/res/xml/pref_misc.xml
+++ b/app/src/main/res/xml/pref_misc.xml
@@ -130,6 +130,9 @@
             android:key="key_misc_superuser"
             android:title="SuperUser"
             android:summary="Enable su and superuser root\n(no SafetyNet if enabled)" />
+		<Preference android:title="@string/add_secure_file"
+            android:key="key_misc_add_secure"
+            android:summary="@string/add_secure_file_summary" />
 		<Preference android:title="Securize"
             android:key="key_misc_securize" />
 		<Preference android:title="@string/remove_telephony_subsystem"
