--- a/app/src/main/res/xml/pref_misc.xml
+++ b/app/src/main/res/xml/pref_misc.xml
@@ -132,6 +132,11 @@
             android:summary="Enable su and superuser root\n(no SafetyNet if enabled)" />
 		<CheckBoxPreference
             android:defaultValue="false"
+            android:key="key_misc_safetynet"
+            android:title="SafetyNet"
+            android:summary="Can help to pass SafetyNet\n(not for all devices)" />
+		<CheckBoxPreference
+            android:defaultValue="false"
             android:key="key_misc_restart_ril"
             android:title="Automatically restart RIL" />
 		<Preference android:title="@string/remove_telephony_subsystem"
