--- a/app/src/main/res/xml/pref_misc.xml
+++ b/app/src/main/res/xml/pref_misc.xml
@@ -143,6 +143,11 @@
             android:summary="Run custom commands from /sdcard/phh/run file" />
 		<CheckBoxPreference
             android:defaultValue="false"
+            android:key="key_misc_nolog"
+            android:title="Disable logging"
+            android:summary="Can help for battery saving" />
+		<CheckBoxPreference
+            android:defaultValue="false"
             android:key="key_misc_restart_ril"
             android:title="Automatically restart RIL" />
 		<Preference android:title="@string/remove_telephony_subsystem"
