Add a "Requires a reboot" summary in the rounded corners setting and make it coherent across all settings

--- a/app/src/main/res/xml/pref_qualcomm.xml
+++ b/app/src/main/res/xml/pref_qualcomm.xml
@@ -4,7 +4,7 @@
         android:defaultValue="false"
         android:key="key_qualcomm_alternate_mediaprofile"
         android:title="Use alternate camera profile"
-        android:summary="Requires reboot" />
+        android:summary="Requires a reboot" />
     <CheckBoxPreference
         android:defaultValue="false"
         android:key="key_qualcomm_alternate_audiopolicy"
