--- a/app/src/main/res/xml/pref_misc.xml
+++ b/app/src/main/res/xml/pref_misc.xml
@@ -144,6 +144,11 @@
             android:summary="Can help to pass SafetyNet\n(not for all devices)" />
 		<CheckBoxPreference
             android:defaultValue="false"
+            android:key="key_misc_pixelprops"
+            android:title="Spoof Pixel 5"
+            android:summary="Disable SafetyNet option first!\nRequires a reboot" />
+		<CheckBoxPreference
+            android:defaultValue="false"
             android:key="key_misc_autorun"
             android:title="AutoRun"
             android:summary="Run custom commands from /sdcard/phh/run file" />
