--- a/app/src/main/res/xml/pref_misc.xml
+++ b/app/src/main/res/xml/pref_misc.xml
@@ -77,6 +77,10 @@
             android:defaultValue="false"
             android:key="key_misc_autobright"
             android:title="Enable autobrightness overlay" />
+		<CheckBoxPreference
+            android:defaultValue="false"
+            android:key="key_misc_minimal_brightness"
+            android:title="Allows setting brightness to the lowest possible" />
 	</PreferenceCategory>
 	<PreferenceCategory android:title="Camera">
 		<CheckBoxPreference
