Add AOD option in misc/display settings to enable overlays to enable AOD

--- a/app/src/main/res/xml/pref_misc.xml
+++ b/app/src/main/res/xml/pref_misc.xml
@@ -58,6 +58,10 @@
             android:key="key_misc_no_hwcomposer"
             android:title="Disable HW overlays"
             android:summary="Eats more CPU and battery" />
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="key_misc_aod"
+            android:title="Force allow Always-On Display" />
 	</PreferenceCategory>
 	<PreferenceCategory android:title="Backlight">
 		<CheckBoxPreference
