--- a/app/src/main/res/xml/pref_misc.xml
+++ b/app/src/main/res/xml/pref_misc.xml
@@ -162,6 +162,11 @@
             android:summary="Run custom commands from /sdcard/phh/run file" />
 		<CheckBoxPreference
             android:defaultValue="false"
+            android:key="key_misc_novendor"
+            android:title="Disable stock overlays &amp; apps"
+            android:summary="Mask /{vendor,odm}/{overlay,app} content" />
+		<CheckBoxPreference
+            android:defaultValue="false"
             android:key="key_misc_restart_ril"
             android:title="Automatically restart RIL" />
 		<Preference android:title="@string/remove_telephony_subsystem"
