Add toggle to use alternate audio policy
This is re-using Qualcomm/CAF property for the time being to prevent
conflict when mount binding the file

--- a/app/src/main/res/xml/pref_samsung.xml
+++ b/app/src/main/res/xml/pref_samsung.xml
@@ -36,6 +36,10 @@
             android:title="Enable extra sensors" />
         <CheckBoxPreference
             android:defaultValue="false"
+            android:key="key_samsung_alternate_audio_policy"
+            android:title="Use alternate audio policy" />
+        <CheckBoxPreference
+            android:defaultValue="false"
             android:key="key_samsung_colorspace"
             android:title="Enable workaround for white-ish screen" />
         <CheckBoxPreference
