Add support for Asus (zf8) DT2W
Add this into a a new "DT2W" option into Misc.
The idea will be to connect the other dt2w option (like Xiaomi, HCT,
...) all back to this one

--- a/app/src/main/res/xml/pref_misc.xml
+++ b/app/src/main/res/xml/pref_misc.xml
@@ -167,6 +167,11 @@
             android:summary="Mask /{vendor,odm}/{overlay,app} content\nRequires a reboot" />
 		<CheckBoxPreference
             android:defaultValue="false"
+            android:key="key_misc_dt2w"
+            android:title="Double tap to wake"
+            android:summary="Unlikely to work for you" />
+		<CheckBoxPreference
+            android:defaultValue="false"
             android:key="key_misc_restart_ril"
             android:title="Automatically restart RIL" />
 		<Preference android:title="@string/remove_telephony_subsystem"
