Add checkbox to disable soundvolume effect at phhusson/device_phh_treble@66cc06b0a9e4de8489b4bd93f68b0d3d9f51ee0a

--- a/app/src/main/res/xml/pref_qualcomm.xml
+++ b/app/src/main/res/xml/pref_qualcomm.xml
@@ -9,4 +9,9 @@
         android:defaultValue="false"
         android:key="key_qualcomm_alternate_audiopolicy"
         android:title="Use alternate audio policy" />
+    <CheckBoxPreference
+        android:defaultValue="false"
+        android:key="key_qualcomm_disable_soundvolume_effect"
+        android:title="Disable soundvolume effect"
+        android:summary="May fix audio distorsion" />
 </PreferenceScreen>
