--- a/app/src/main/res/xml/pref_misc.xml
+++ b/app/src/main/res/xml/pref_misc.xml
@@ -62,6 +62,11 @@
             android:defaultValue="false"
             android:key="key_misc_aod"
             android:title="Force allow Always-On Display" />
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="key_misc_nocutout"
+            android:title="Disable fullscreen cutout hiding"
+            android:summary="Requires a reboot" />
 	</PreferenceCategory>
 	<PreferenceCategory android:title="Backlight">
 		<CheckBoxPreference
